# chat-langchain-lite

./: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml  requirements.txt
.github/workflows/: evals.yml
agent/: agent.py
scripts/: cleanup.py  run_evals.py
utils/: models.py
web/: app.py
