[project]
name = "chat-lc-lite-agent"
version = "0.1.0"
description = "Chat LangChain Lite — a LangChain ecosystem chatbot with intentional bugs, built to demo LangSmith Engine"
requires-python = ">=3.11"
dependencies = [
    "langchain-anthropic>=1.4.6",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "langgraph-sdk>=0.3.15",
    "langsmith>=0.8.18",
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "python-fasthtml>=0.12.0",
    "deepagents>=0.6.3",
    "langchain>=1.3.1",
    "langgraph-cli[inmem]>=0.4.21"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

# Flat layout: the graph + mounted FastHTML UI (agent/, web/) plus their shared
# helpers (context/, utils/) are the deployable runtime. evals/ and scripts/ are
# dev/CI tooling (run with `python -m`) but stay listed so `dependencies: ["."]`
# in langgraph.json installs an importable package tree (context imports evals).
[tool.setuptools]
packages = ["agent", "context", "utils", "web", "evals", "scripts"]

[tool.setuptools.package-data]
# Bundle the logo so the mounted FastHTML UI can read it from the installed package.
web = ["*.png"]
